fix bottom spacing for dropdown

--- a/static/css/eventCreate.css
+++ b/static/css/eventCreate.css
@@ -56,6 +56,7 @@ textarea {
     max-width: 900px;
     transition: opacity 250ms linear;
 	font-size: 25px;
+    margin-bottom: 10px;
 }
 
 .event-create-title {
